--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -991,6 +991,14 @@
     "message":"Vietnamesisk",
     "description":"A filter list combined with EasyList"
   },
+  "filter_easylist_plus_vietnamese":{
+    "message":"Vietnamesisk + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"Brasiliansk portugisisk",
+    "description":"A filter list"
+  },
   "other":{
     "message":"Annet",
     "description":"Multiple choice option"
@@ -1662,7 +1670,7 @@
     "description":"Resource list page: followed by frame type (top frame, subframe)"
   },
   "framedomain":{
-    "message":"Ramme domene: ",
+    "message":"Rammedomene: ",
     "description":"Resource list page: domain name of the frame"
   },
   "frameurl":{
@@ -1824,5 +1832,41 @@
   "local_cdn_option":{
     "message":"Aktiver lokalt innhold hurtigbufring for populære nettside biblioteker",
     "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"NY",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Aktiver MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"MyAdBlock innstillinger",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Kategorier",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Bytt ut noen blokkerte annonser med bilder av høy kvalitet fra kategoriene nedenfor",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Katter",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Hunder",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Landskap",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
   }
 }
