--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 3.31.2, Date: 2018-06-13
+- Updated translations
+- Updated to ABP Core 3.1+ (#308)
+
 3.30.1:
 - Updated translations
 - Made minor changes to the style and layout of the AdBlock popup menu.  (#310)
