--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -535,6 +535,10 @@
     "message":"Chcete upozornit, když AdBlock detekuje malware?",
     "description":"Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
   },
+  "malwarenotificationmessage":{
+    "message":"AdBlock zablokoval stahování ze stránky, na které se vyskytuje malware.",
+    "description":"Notification when a potential malware request has been blocked. This message should be under 90 characters!"
+  },
   "malwarenotificationlearnmore":{
     "message":"Další informace o malware",
     "description":"Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
@@ -622,6 +626,10 @@
   "disableforsafaristepone":{
     "message":"Klikněte na menu Safari > Nastavení > Rozšíření.",
     "description":"Step 1 for disabling Safari extensions"
+  },
+  "correctfilters":{
+    "message":"Ujistěte se, že používáte správné jazykové filtry:",
+    "description":"On the ad report page, label describing having the right filter lists enabled"
   },
   "pagelanguagecheck":{
     "message":"V jakém jazyce je stránka napsána?",
@@ -1219,6 +1227,10 @@
     "message":"Překlady",
     "description":"A tab on the Options page"
   },
+  "translators":{
+    "message":"Zjistěte více o tom, jak pomoci přeložit AdBlock [[here]]",
+    "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
+  },
   "report_ad_on_page":{
     "message":"Nahlásit reklamu na této stránce",
     "description":"Entry in the AdBlock button menu"
@@ -1657,8 +1669,48 @@
     "message":"Originální vstup: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
   },
+  "show_language_options":{
+    "message":"Nechte mě si vybrat zobrazovací jazyk AdBlocku",
+    "description":"Option to let the user choose AdBlock's display language."
+  },
   "display_language_selector":{
     "message":"Zobrazit AdBlock v jazyce",
     "description":"Text shown before language selector drop-down."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"NOVÉ",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Povolit MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"Možnosti MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Kategorie",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Nahraďte zablokované reklamy vysoce kvalitními obrázky z kategoriích níže",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Kočky",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Psi",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Krajiny",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
   }
 }
