--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -991,6 +991,14 @@
     "message":"Vietnam",
     "description":"A filter list combined with EasyList"
   },
+  "filter_easylist_plus_vietnamese":{
+    "message":"Vietnam + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"Brazil Portugis",
+    "description":"A filter list"
+  },
   "other":{
     "message":"Lain-lain",
     "description":"Multiple choice option"
@@ -1824,5 +1832,41 @@
   "local_cdn_option":{
     "message":"Dayakan caching kandungan tempatan untuk pustaka laman web popular",
     "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"BAHARU",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Dayakan MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"Tetapan MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Kategori",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Gantikan sesetengah iklan yg disekat dengan imej berkualiti tinggi daripada kategori di bawah",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Kucing",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Anjing",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Pemandangan",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
   }
 }
