--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -991,6 +991,14 @@
     "message":"Wietnamski",
     "description":"A filter list combined with EasyList"
   },
+  "filter_easylist_plus_vietnamese":{
+    "message":"Wietnamski + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"Brazylijski portugalski",
+    "description":"A filter list"
+  },
   "other":{
     "message":"Innym",
     "description":"Multiple choice option"
@@ -1824,5 +1832,41 @@
   "local_cdn_option":{
     "message":"Włącz lokalne buforowanie zawartości dla biblioteki popularnych stron internetowych",
     "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"NOWOŚĆ",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Włącz MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"Opcje MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Kategorie",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Zastąp niektóre zablokowane reklamy obrazami wysokiej jakości z kategorii poniżej",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Koty",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Psy",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Krajobrazy",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
   }
 }
