Updated with version: 3.32.0 changes

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -251,6 +251,10 @@
     "message":"Opcions generals",
     "description":"Title of the first Options page tab"
   },
+  "mac_app_message_options":{
+    "message":"L'AdBlock per al Safari ja està disponible com a aplicació per al Mac!",
+    "description":"Message to users on the Options page"
+  },
   "betalabel":{
     "message":"Beta",
     "description":"Label for experimental features in AdBlock Options"
@@ -1386,6 +1390,14 @@
   "firefox_explanation":{
     "message":"El propòsit d'aquesta pregunta és determinar qui ha de rebre el vostre informe. Si contesteu aquesta pregunta de forma incorrecta, l'informe s'enviarà a les persones equivocades, i potser sigueu ignorats.",
     "description":"Explanation of the 'Check in Firefox or Chrome' step on the ad report page"
+  },
+  "mac_app_message_menu_part_one":{
+    "message":"Nou!",
+    "description":"part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two":{
+    "message":"Proveu l'aplicació AdBlock per al Mac",
+    "description":"part two of the message to safari users on the popup menu"
   },
   "blocked_ads":{
     "message":"Anuncis bloquejats:",
