--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -28,7 +28,7 @@
     "description":"Cancel button"
   },
   "buttonok":{
-    "message":"OK!",
+    "message":"Okay!",
     "description":"OK button"
   },
   "reportpubliclyavailable":{
@@ -360,7 +360,7 @@
     "description":"Error alert when subscribing to a filter list"
   },
   "removefromlist":{
-    "message":"aus Liste entfernen",
+    "message":"Aus Liste entfernen",
     "description":"Label to remove a custom filter list"
   },
   "you_know_thats_a_bad_idea_right":{
@@ -424,7 +424,7 @@
     "description":"A filter list"
   },
   "filterrussian":{
-    "message":"russisch und ukrainisch",
+    "message":"Russisch und Ukrainisch",
     "description":"Language names for a filter list"
   },
   "filter_russian":{
@@ -432,7 +432,7 @@
     "description":"A filter list combined with EasyList"
   },
   "filterczech":{
-    "message":"tschechisch und slowakisch",
+    "message":"Tschechisch und Slowakisch",
     "description":"A filter list"
   },
   "filter_czech":{
@@ -652,7 +652,7 @@
     "description":"A negative response to a question"
   },
   "adalreadyblocked":{
-    "message":"Toll! Alles klar!",
+    "message":"Toll! Alles klar.",
     "description":"On the ad report page, telling the user there is nothing to do as the ad they were seeing is now blocked."
   },
   "disableallextensions":{
@@ -712,27 +712,27 @@
     "description":"Question on ad report page"
   },
   "lang_english":{
-    "message":"englisch",
+    "message":"Englisch",
     "description":"Language name"
   },
   "lang_czech":{
-    "message":"tschechisch",
+    "message":"Tschechisch",
     "description":"Language name"
   },
   "lang_spanish":{
-    "message":"spanisch",
+    "message":"Spanisch",
     "description":"Language name"
   },
   "lang_russian":{
-    "message":"russisch",
+    "message":"Russisch",
     "description":"Language name"
   },
   "lang_slovak":{
-    "message":"slowakisch",
+    "message":"Slowakisch",
     "description":"Language name"
   },
   "lang_ukranian":{
-    "message":"ukrainisch",
+    "message":"Ukrainisch",
     "description":"Language name"
   },
   "lang_arabic":{
@@ -740,19 +740,19 @@
     "description":"Language name"
   },
   "lang_bulgarian":{
-    "message":"bulgarisch",
+    "message":"Bulgarisch",
     "description":"Language name"
   },
   "lang_chinese":{
-    "message":"chinesisch",
+    "message":"Chinesisch",
     "description":"Language name"
   },
   "lang_danish":{
-    "message":"dänisch",
+    "message":"Dänisch",
     "description":"Language name"
   },
   "lang_dutch":{
-    "message":"niederländisch",
+    "message":"Niederländisch",
     "description":"Language name"
   },
   "lang_estonian":{
@@ -760,23 +760,23 @@
     "description":"Language name"
   },
   "lang_finnish":{
-    "message":"finnisch",
+    "message":"Finnisch",
     "description":"Language name"
   },
   "lang_french":{
-    "message":"französisch",
+    "message":"Französisch",
     "description":"Language name"
   },
   "lang_german":{
-    "message":"deutsch",
+    "message":"Deutsch",
     "description":"Language name"
   },
   "lang_greek":{
-    "message":"griechisch",
+    "message":"Griechisch",
     "description":"Language name"
   },
   "lang_hungarian":{
-    "message":"ungarisch",
+    "message":"Ungarisch",
     "description":"Language name"
   },
   "lang_indonesian":{
@@ -788,19 +788,19 @@
     "description":"Language name"
   },
   "lang_israeli":{
-    "message":"israelisch",
+    "message":"Hebräisch",
     "description":"Language name"
   },
   "lang_italian":{
-    "message":"italienisch",
+    "message":"Italienisch",
     "description":"Language name"
   },
   "lang_japanese":{
-    "message":"japanisch",
+    "message":"Japanisch",
     "description":"Language name"
   },
   "lang_korean":{
-    "message":"koreanisch",
+    "message":"Koreanisch",
     "description":"Language name"
   },
   "lang_lithuania":{
@@ -808,11 +808,11 @@
     "description":"Language name"
   },
   "lang_polish":{
-    "message":"polnisch",
+    "message":"Polnisch",
     "description":"Language name"
   },
   "lang_romanian":{
-    "message":"rumänisch",
+    "message":"Rumänisch",
     "description":"Language name"
   },
   "lang_latvian":{
@@ -832,7 +832,7 @@
     "description":"Language name"
   },
   "lang_chinese_simplified":{
-    "message":"Vereinfachtes Chinesisch",
+    "message":"Chinesisch (vereinfacht)",
     "description":"Language name"
   },
   "lang_chinese_traditional":{
@@ -868,7 +868,7 @@
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
-    "message":"bulgarisch",
+    "message":"Bulgarisch",
     "description":"A filter list"
   },
   "filter_easylist_plus_bulgarian":{
@@ -876,7 +876,7 @@
     "description":"A filter list combined with EasyList"
   },
   "filterchinese":{
-    "message":"chinesisch",
+    "message":"Chinesisch",
     "description":"A filter list"
   },
   "filter_chinese":{
@@ -884,11 +884,11 @@
     "description":"A filter list combined with EasyList"
   },
   "filterdanish":{
-    "message":"dänisch",
+    "message":"Dänisch",
     "description":"A filter list"
   },
   "filterdutch":{
-    "message":"niederländisch",
+    "message":"Niederländisch",
     "description":"A filter list"
   },
   "filter_dutch":{
@@ -896,11 +896,11 @@
     "description":"A filter list combined with EasyList"
   },
   "filtereasylist_plus_finnish":{
-    "message":"finnisch",
+    "message":"Finnisch",
     "description":"A filter list"
   },
   "filtereasylist_plus_french":{
-    "message":"französisch",
+    "message":"Französisch",
     "description":"A filter list"
   },
   "filter_easylist_plus_french":{
@@ -908,7 +908,7 @@
     "description":"A filter list combined with EasyList"
   },
   "filtereasylist_plus_german":{
-    "message":"deutsch",
+    "message":"Deutsch",
     "description":"A filter list"
   },
   "filter_easylist_plus_german":{
@@ -916,15 +916,15 @@
     "description":"A filter list combined with EasyList"
   },
   "filtereasylist_plus_greek":{
-    "message":"griechisch",
+    "message":"Griechisch",
     "description":"A filter list"
   },
   "filterhungarian":{
-    "message":"ungarisch",
+    "message":"Ungarisch",
     "description":"A filter list"
   },
   "filterisraeli":{
-    "message":"israelisch",
+    "message":"Hebräisch",
     "description":"A filter list"
   },
   "filter_israeli":{
@@ -932,7 +932,7 @@
     "description":"A filter list combined with EasyList"
   },
   "filteritalian":{
-    "message":"italienisch",
+    "message":"Italienisch",
     "description":"A filter list"
   },
   "filter_italian":{
@@ -940,19 +940,19 @@
     "description":"A filter list combined with EasyList"
   },
   "filterjapanese":{
-    "message":"japanisch",
+    "message":"Japanisch",
     "description":"A filter list"
   },
   "filtereasylist_plun_korean":{
-    "message":"koreanisch",
+    "message":"Koreanisch",
     "description":"A filter list"
   },
   "filtereasylist_plus_polish":{
-    "message":"polnisch",
+    "message":"Polnisch",
     "description":"A filter list"
   },
   "filtereasylist_plus_romanian":{
-    "message":"rumänisch",
+    "message":"Rumänisch",
     "description":"A filter list"
   },
   "filter_easylist_plus_romanian":{
@@ -960,7 +960,7 @@
     "description":"A filter list combined with EasyList"
   },
   "filtereasylist_plus_spanish":{
-    "message":"spanisch",
+    "message":"Spanisch",
     "description":"A filter list"
   },
   "filtereasylist_plus_arabic":{
@@ -991,8 +991,16 @@
     "message":"Vietnamesisch",
     "description":"A filter list combined with EasyList"
   },
+  "filter_easylist_plus_vietnamese":{
+    "message":"Vietnamesisch + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"Portugiesisch (Brasilien)",
+    "description":"A filter list"
+  },
   "other":{
-    "message":"nichtgelistete Sprache",
+    "message":"Sonstiges",
     "description":"Multiple choice option"
   },
   "nodefaultfilter1":{
@@ -1100,11 +1108,11 @@
     "description":"A resource type"
   },
   "typescript":{
-    "message":"skript",
+    "message":"Skript",
     "description":"A resource type"
   },
   "typeimage":{
-    "message":"grafik",
+    "message":"Grafik",
     "description":"A resource type"
   },
   "typestylesheet":{
@@ -1112,7 +1120,7 @@
     "description":"A resource type"
   },
   "typeobject":{
-    "message":"interaktives objekt",
+    "message":"interaktives Objekt",
     "description":"A resource type"
   },
   "typesubdocument":{
@@ -1128,7 +1136,7 @@
     "description":"A resource type"
   },
   "typeother":{
-    "message":"sonstiges",
+    "message":"Sonstiges",
     "description":"A resource type"
   },
   "typepopup":{
@@ -1140,7 +1148,7 @@
     "description":"A resource type"
   },
   "typepage":{
-    "message":"seite",
+    "message":"Seite",
     "description":"A resource type"
   },
   "typewebsocket":{
@@ -1252,7 +1260,7 @@
     "description":"Menu entry to pause the extension (stop blocking ads)"
   },
   "safaricontentblockingpausemessage":{
-    "message":"Um AdBlock mit aktiviertem Content Blocking zu pausieren, klicken Sie bitte auf Safari (in der Menüleiste) > Einstellungen ... > Erweiterungen > AdBlock, und entfernen Sie den Haken unter \"AdBlock aktivieren\".",
+    "message":"Um AdBlock mit aktiviertem Content Blocking zu pausieren, klicken Sie bitte auf Safari (in der Menüleiste) > Einstellungen... > Erweiterungen > AdBlock, und entfernen Sie den Haken unter \"AdBlock aktivieren\".",
     "description":"Alert displayed after clicking 'Pause AdBlock' in the AdBlock menu while Safari Content blocking is enabled."
   },
   "safaricontentblockinglimitexceeded":{
@@ -1324,7 +1332,7 @@
     "description":"A tab on the Options page"
   },
   "translators":{
-    "message":"Erfahren Sie mehr darüber, wie Sie helfen können AdBlock zu übersetzen [[here]]",
+    "message":"Erfahren Sie mehr darüber, wie Sie helfen können AdBlock zu übersetzen [[hier]]",
     "description":"A link on the Options page \/ translators tab to a KB article about how to help translate AdBlock"
   },
   "report_ad_on_page":{
@@ -1474,7 +1482,7 @@
     "description":"Text of a link pointing to the explanation of a new feature"
   },
   "selectlanguage":{
-    "message":"-- Sprache auswählen --",
+    "message":" -- Sprache auswählen -- ",
     "description":"First option in the language dropdown menu on the Filter lists tab. Include the ' -- ' on either side of your translation."
   },
   "allow_whitelisting_youtube_channels":{
@@ -1562,11 +1570,11 @@
     "description":"Subtitle on the Support tab"
   },
   "sourcecode":{
-    "message":"Der Quellcode ist [[frei verfügbar]].",
+    "message":"Der Quellcode ist [[frei verfügbar]]!",
     "description":"Link to the source code of AdBlock on the Support tab"
   },
   "contributors":{
-    "message":"Wir haben ausserdem eine Seite auf der Sie mehr erfahren können über die [[Mitwirkenden hinter AdBlock]]!",
+    "message":"Wir haben außerdem eine Seite auf der Sie mehr erfahren können über die [[Mitwirkenden hinter AdBlock]]!",
     "description":"Link to the contributors page on the Support tab"
   },
   "debuginfo":{
@@ -1578,7 +1586,7 @@
     "description":"Link to send a bug report on the Support tab"
   },
   "supportsite":{
-    "message":"Teilen Sie uns Ihre Idee oder Ihre Frage auf unserer [[Support-Seite]] mit.",
+    "message":"Teilen Sie uns Ihre Idee oder Ihre Frage auf unserer [[Support-Seite]] mit!",
     "description":"Link to the support site on the Support tab"
   },
   "ad_report_please":{
@@ -1646,7 +1654,7 @@
     "description":"A resource type"
   },
   "typemain_frame":{
-    "message":"seite",
+    "message":"Seite",
     "description":"A resource type"
   },
   "topframe":{
@@ -1658,7 +1666,7 @@
     "description":"Resource list page: frame type"
   },
   "frametype":{
-    "message":"Frame-Typ:",
+    "message":"Frame-Typ: ",
     "description":"Resource list page: followed by frame type (top frame, subframe)"
   },
   "framedomain":{
@@ -1758,7 +1766,7 @@
     "description":"Button to send a form."
   },
   "adreport_missing_info":{
-    "message":"Erforderliche Informationen fehlen oder sind ungültig.  Bitte beantworten sie die Fragen die rot umrahmt sind.",
+    "message":"Erforderliche Informationen fehlen oder sind ungültig.  Bitte beantworten Sie die rot hervorgehobenen Felder.",
     "description":"Error message shown when the user doesn't enter anything in some of the text fields."
   },
   "adreport_missing_screenshot":{
@@ -1814,11 +1822,63 @@
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
   },
   "show_language_options":{
-    "message":"Sprache in der AdBlock angezeigt werden soll auswählen",
+    "message":"Sprache auswählen, in der AdBlock angezeigt werden soll",
     "description":"Option to let the user choose AdBlock's display language."
   },
   "display_language_selector":{
     "message":"AdBlock anzeigen in",
     "description":"Text shown before language selector drop-down."
+  },
+  "local_cdn_option":{
+    "message":"Aktiviere lokales Zwischenspeichern für beliebte Website-Bibliotheken",
+    "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"NEU",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Aktiviere MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"MyAdBlock Einstellungen",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Kategorien",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Ersetze einige blockierte Werbungen mit hochwertigen Bildern aus folgenden Kategorien",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Katzen",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Hunde",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Landschaften",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "mac_app_message_options": {
+    "message": "AdBlock für Safari ist jetzt als Mac-App verfügbar!",
+    "description": "Message to users on the Options page"
+  },
+  "mac_app_message_menu_part_one": {
+    "message": "Neu!",
+    "description": "part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two": {
+    "message": "Testen Sie die AdBlock-Mac-App",
+    "description": "part two of the message to safari users on the popup menu"
   }
 }
