--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -251,6 +251,10 @@
     "message":"General options",
     "description":"Title of the first Options page tab"
   },
+  "mac_app_message_options":{
+    "message":"AdBlock for Safari is now available as a Mac app!",
+    "description":"Message to users on the Options page"
+  },
   "betalabel":{
     "message":"Beta",
     "description":"Label for experimental features in AdBlock Options"
@@ -1386,6 +1390,14 @@
   "firefox_explanation":{
     "message":"The purpose of this question is to determine who should receive your report. If you answer this question incorrectly, the report will be sent to the wrong people, so it may get ignored.",
     "description":"Explanation of the 'Check in Firefox or Chrome' step on the ad report page"
+  },
+  "mac_app_message_menu_part_one":{
+    "message":"New!",
+    "description":"part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two":{
+    "message":"Try the AdBlock Mac app",
+    "description":"part two of the message to safari users on the popup menu"
   },
   "blocked_ads":{
     "message":"Blocked ads:",
