--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1382,5 +1382,17 @@
   "custom_filters_migration_error_message_part3":{
     "message":"Ursprungligt inlägg: ",
     "description":"Part three of a message shown to users on the Customize tab of the Options page after invalid custom filters have been migrated"
+  },
+  "mac_app_message_options": {
+    "message": "Nu finns AdBlock för Safari tillgängligt som en Mac-app!",
+    "description": "Message to users on the Options page"
+  },
+  "mac_app_message_menu_part_one": {
+    "message": "Ny!",
+    "description": "part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two": {
+    "message": "Prova AdBlock som Mac-app",
+    "description": "part two of the message to safari users on the popup menu"
   }
 }
