--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1220,5 +1220,17 @@
   "adreport_response_file_name":{
     "message":"檔案名稱過長。請使用簡短的檔案名稱。",
     "description":"Error message shown when the file name of an attachement the user is trying to submit in a report is longer than 255 characters."
+  },
+  "mac_app_message_options": {
+    "message": "Safari的AdBlock現已以Mac應用程式推出！",
+    "description": "Message to users on the Options page"
+  },
+  "mac_app_message_menu_part_one": {
+    "message": "新的！",
+    "description": "part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two": {
+    "message": "嘗試AdBlock Mac應用程式",
+    "description": "part two of the message to safari users on the popup menu"
   }
 }
