--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -251,6 +251,10 @@
     "message":"אפשרויות כלליות",
     "description":"Title of the first Options page tab"
   },
+  "mac_app_message_options":{
+    "message":"AdBlock עבור Safari זמין כעת בתור יישום Mac!",
+    "description":"Message to users on the Options page"
+  },
   "betalabel":{
     "message":"ביתא",
     "description":"Label for experimental features in AdBlock Options"
@@ -1386,6 +1390,14 @@
   "firefox_explanation":{
     "message":"המטרה של שאלה זו היא לקבוע מי אמור לקבל את הדוח שלך. אם תענה על שאלה זאת באופן שגוי, הדוח יישלח לאנשים הלא נכונים, כך שהוא עשוי להיתקל בהתעלמות.",
     "description":"Explanation of the 'Check in Firefox or Chrome' step on the ad report page"
+  },
+  "mac_app_message_menu_part_one":{
+    "message":"חדש!",
+    "description":"part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two":{
+    "message":"נסה את יישום Mac של AdBlock",
+    "description":"part two of the message to safari users on the popup menu"
   },
   "blocked_ads":{
     "message":"פרסומות חסומות:",
