--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1832,5 +1832,53 @@
   "local_cdn_option":{
     "message":"一般的なサイトのライブラリに対し、ローカル コンテンツ キャッシュを有効にします。",
     "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"新しい",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"MyAdBlock を有効化",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"MyAdBlock 設定",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"カテゴリ",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"ブロックされた広告を以下のカテゴリーの高品質な画像と置き換える",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"猫",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"犬",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"風景",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "mac_app_message_options": {
+    "message": "Safari版AdBlockがMacアプリとして登場！",
+    "description": "Message to users on the Options page"
+  },
+  "mac_app_message_menu_part_one": {
+    "message": "New!",
+    "description": "part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two": {
+    "message": "AdBlockのMacアプリをお試しください",
+    "description": "part two of the message to safari users on the popup menu"
   }
 }
