--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -28,7 +28,7 @@
     "description":"Cancel button"
   },
   "buttonok":{
-    "message":"Okej!",
+    "message":"OK!",
     "description":"OK button"
   },
   "reportpubliclyavailable":{
@@ -48,7 +48,7 @@
     "description":"Title for the Options page"
   },
   "optionstitle_yt":{
-    "message":"OPcje AdBlocka dla YouTube™",
+    "message":"Opcje AdBlocka dla YouTube™",
     "description":"Title for the Options page for the 'AdBlock on YouTube' extension."
   },
   "chromebutton_how_to_hide2":{
@@ -1368,7 +1368,7 @@
     "description":"Label for textbox where user enters a list of sites on Customize tab"
   },
   "format_site1_site2_site3":{
-    "message":"Format: ~site1.com|~site2.com|~news.site3.org",
+    "message":"Format: ~witryna1.com|~witryna2.com|~wiadomosci.witryna3.org",
     "description":"Example showing users how to input a list of sites on the Customize tab. You can translate the 'news' and 'siteN' but leave the '|'s and '~'s in place."
   },
   "warning_overrules_filters":{
@@ -1854,7 +1854,7 @@
     "description":"The text of the header the MyAdBlock Options page"
   },
   "myadblockpicreplacementswitchlabel":{
-    "message":"Zastąp niektóre zablokowane reklamy obrazami wysokiej jakości z kategorii poniżej",
+    "message":"Zastąp zablokowane reklamy obrazami wysokiej jakości z poniższych kategorii",
     "description":"The label text for the switch on the MyAdBlock Options page"
   },
   "catchannelswitchlabel":{
