--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -28,7 +28,7 @@
     "description":"Cancel button"
   },
   "buttonok":{
-    "message":"OK!",
+    "message":"ОК!",
     "description":"OK button"
   },
   "reportpubliclyavailable":{
@@ -991,6 +991,14 @@
     "message":"Вьетнамский",
     "description":"A filter list combined with EasyList"
   },
+  "filter_easylist_plus_vietnamese":{
+    "message":"Vietnamese + EasyList",
+    "description":"A filter list combined with EasyList"
+  },
+  "filterbrazilian_portuguese":{
+    "message":"Бразильский португальский",
+    "description":"A filter list"
+  },
   "other":{
     "message":"Другой",
     "description":"Multiple choice option"
@@ -1824,5 +1832,53 @@
   "local_cdn_option":{
     "message":"Разрешить локальное кэширование содержимого для популярных библиотек сайтов",
     "description":"Option to let the user enable Local CDN feature."
+  },
+  "myadblockoptions":{
+    "message":"MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Options page"
+  },
+  "newmyadblockenrollment":{
+    "message":"НОВЫЙ",
+    "description":"The text of the 'Enable MyAdBlock' menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockenrollment":{
+    "message":"Включить MyAdBlock",
+    "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
+  },
+  "myadblockoptionspageheader":{
+    "message":"Настройки MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockoptionscategoryheader":{
+    "message":"Категории",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblockpicreplacementswitchlabel":{
+    "message":"Замените некоторое заблокированное содержимое изображениями высокого качества из категорий ниже",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "catchannelswitchlabel":{
+    "message":"Коты",
+    "description":"The label text for the cat switch on the MyAdBlock Options page"
+  },
+  "dogchannelswitchlabel":{
+    "message":"Собаки",
+    "description":"The label text for the dog switch on the MyAdBlock Options page"
+  },
+  "landscapechannelswitchlabel":{
+    "message":"Альбомная ориентация",
+    "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "mac_app_message_options": {
+    "message": "AdBlock для Safari теперь доступен в виде приложения для Mac!",
+    "description": "Message to users on the Options page"
+  },
+  "mac_app_message_menu_part_one": {
+    "message": "Новинка!",
+    "description": "part one of the message to safari users on the popup menu"
+  },
+  "mac_app_message_menu_part_two": {
+    "message": "Попробуйте приложение AdBlock для Mac",
+    "description": "part two of the message to safari users on the popup menu"
   }
 }
